[metadata]
name = unwrap
summary = A tool for unwrapping paragraph lines
author = André Berti Sassi
author-email = absassi@gmail.com
license = MIT
home-page = http://...
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Topic :: Text Processing

[entry_points]
console_scripts =
    unwrap = unwrap.command:run

[files]
packages =
    unwrap

[test]
addopts = tests

[pytest]
addopts =
    --cov unwrap --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
